<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="input_hint">Cost of Service</string>
    <string name="top_text">How was the service?</string>
    <string name="radio_amazing">Amazing (20%)</string>
    <string name="radio_good">Good (18%)</string>
    <string name="radio_ok">OK (15%)</string>
    <string name="round_up_text">Round up?</string>
    <string name="calculate_text">Calculate</string>
</resources>
